src/core/c_api/itscam_sdk_c.h

typedef struct ITSCAM_CaptureResult ITSCAM_CaptureResult;
typedef struct ITSCAM_ByteArray ITSCAM_ByteArray;
typedef struct ITSCAM_ProfileArray ITSCAM_ProfileArray;
/* ============================================================================
 *  Timestamp Structure
 * ============================================================================ */

typedef struct ITSCAM_Timestamp {
    uint16_t year;
    uint16_t month;
    uint16_t day;
    uint16_t hour;
    uint16_t minute;
    uint16_t second;
    uint16_t millisecond;
    int32_t  timezone_offset;
} ITSCAM_Timestamp;
/* ============================================================================
 *  Profile Info Structure
 * ============================================================================ */

typedef struct ITSCAM_ProfileInfo {
    uint32_t    id;
    const char* name;       /* Valid until ITSCAM_ProfileArray_destroy */
    const char* description;
    int         isActive;
} ITSCAM_ProfileInfo;
/**
 * @brief Get a recognized plate string.
 * @param result Result handle.
 * @param index  Plate index (0-based).
 * @return Plate string, or NULL if out of bounds.
 */
ITSCAM_C_API const char* ITSCAM_CaptureResult_getPlate(
    const ITSCAM_CaptureResult* result,
    size_t index);
/* ============================================================================
 *  ByteArray Accessors
 * ============================================================================ */

/**
 * @brief Get the size of a byte array.
 */
ITSCAM_C_API size_t ITSCAM_ByteArray_size(const ITSCAM_ByteArray* array);
/**
 * @brief Get the data pointer from a byte array.
 */
ITSCAM_C_API const uint8_t* ITSCAM_ByteArray_data(const ITSCAM_ByteArray* array);
/**
 * @brief Destroy a byte array.
 */
ITSCAM_C_API void ITSCAM_ByteArray_destroy(ITSCAM_ByteArray* array);
/* ============================================================================
 *  ProfileArray Accessors
 * ============================================================================ */

/**
 * @brief Get the number of profiles in an array.
 */
ITSCAM_C_API size_t ITSCAM_ProfileArray_size(const ITSCAM_ProfileArray* array);
/**
 * @brief Get a profile from an array.
 * @param array Array handle.
 * @param index Index (0-based).
 * @param outInfo Pointer to receive the profile info.
 * @return Nonzero on success, 0 if out of bounds.
 */
ITSCAM_C_API int ITSCAM_ProfileArray_get(
    const ITSCAM_ProfileArray* array,
    size_t index,
    ITSCAM_ProfileInfo* outInfo);
/**
 * @brief Destroy a profile array.
 */
ITSCAM_C_API void ITSCAM_ProfileArray_destroy(ITSCAM_ProfileArray* array);
/* ============================================================================
 *  Utility Functions
 * ============================================================================ */

/**
 * @brief Get the current local time.
 */
ITSCAM_C_API ITSCAM_Timestamp ITSCAM_getSystemLocalTime(void);
/**
 * @brief Get the current UTC time.
 */
ITSCAM_C_API ITSCAM_Timestamp ITSCAM_getSystemUtcTime(void);
/**
 * @brief Get the epoch time in seconds.
 */
ITSCAM_C_API uint64_t ITSCAM_getEpochTime(void);
/**
 * @brief Get the epoch time in milliseconds.
 */
ITSCAM_C_API uint64_t ITSCAM_getEpochTimeMs(void);
/**
 * @brief Store data to a file.
 * @param path      File path.
 * @param data      Data buffer.
 * @param size      Data size in bytes.
 * @param overwrite Overwrite if file exists.
 * @return Nonzero on success, 0 on failure.
 */
ITSCAM_C_API int ITSCAM_storeFile(
    const char* path,
    const uint8_t* data,
    size_t size,
    int overwrite);
/**
 * @brief Create a directory.
 * @param path      Directory path.
 * @param recursive Create parent directories if needed.
 * @return Nonzero on success, 0 on failure.
 */
ITSCAM_C_API int ITSCAM_createFolder(const char* path, int recursive);
/**
 * @brief Check if a file exists.
 */
ITSCAM_C_API int ITSCAM_fileExists(const char* path);
/**
 * @brief Check if a directory exists.
 */
ITSCAM_C_API int ITSCAM_folderExists(const char* path);
/**
 * @brief Get the last error message.
 * @return Error message string (thread-local, valid until next SDK call).
 */
ITSCAM_C_API const char* ITSCAM_getLastError(void);
/**
 * @brief Get the SDK version string.
 */
ITSCAM_C_API const char* ITSCAM_getVersion(void);