src/core/c_api/itscam_rest_client_c.h

/* ============================================================================
 *  Opaque handles
 * ============================================================================ */

typedef struct ITSCAM_RestClient ITSCAM_RestClient;
/// UTF-8 NUL-terminated string buffer owned by the SDK.
typedef struct ITSCAM_String ITSCAM_String;
/* ============================================================================
 *  Lifecycle
 * ============================================================================ */

/// Allocate a new REST client.  Returns NULL on out-of-memory.
ITSCAM_C_API ITSCAM_RestClient* ITSCAM_RestClient_create(void);
/// Free a REST client.  Safe to call with NULL.
ITSCAM_C_API void ITSCAM_RestClient_destroy(ITSCAM_RestClient* client);
/* ============================================================================
 *  Connection / TLS
 * ============================================================================ */

/// Configure host, port and scheme.  scheme is "http" (default) or "https".
/// Pass port = 0 to use the protocol default (80 for http, 443 for https).
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setBaseUrl(
    ITSCAM_RestClient* client,
    const char* host,
    uint16_t port,
    const char* scheme);
ITSCAM_C_API void ITSCAM_RestClient_setApiPrefix(
    ITSCAM_RestClient* client,
    const char* prefix);
ITSCAM_C_API void ITSCAM_RestClient_setCaCertFile(
    ITSCAM_RestClient* client,
    const char* pemPath);
ITSCAM_C_API void ITSCAM_RestClient_setCaCertData(
    ITSCAM_RestClient* client,
    const char* pem);
ITSCAM_C_API void ITSCAM_RestClient_setVerifyServerCertificate(
    ITSCAM_RestClient* client,
    int verify);
ITSCAM_C_API void ITSCAM_RestClient_setClientCertificate(
    ITSCAM_RestClient* client,
    const char* certPem,
    const char* keyPem);
/* ============================================================================
 *  Authentication
 * ============================================================================ */

/// POST /api/auth and store the returned bearer token internally.
/// outResponse receives the JSON response (caller must release with
/// ITSCAM_String_destroy).  Pass NULL to discard.
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_login(
    ITSCAM_RestClient* client,
    const char* username,
    const char* password,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API void ITSCAM_RestClient_setAuthToken(
    ITSCAM_RestClient* client,
    const char* token);
ITSCAM_C_API void ITSCAM_RestClient_clearAuthToken(
    ITSCAM_RestClient* client);
/* ============================================================================
 *  ITSCAM_String accessors
 * ============================================================================ */

ITSCAM_C_API const char* ITSCAM_String_data(const ITSCAM_String* s);
ITSCAM_C_API size_t      ITSCAM_String_size(const ITSCAM_String* s);
ITSCAM_C_API void        ITSCAM_String_destroy(ITSCAM_String* s);