src/wrappers/python/itscam/bindings.py

    
    lib.ITSCAM_CaptureResult_getPlate.argtypes = [ITSCAM_CaptureResult, c_size_t]
    lib.ITSCAM_CaptureResult_getPlate.restype = c_char_p
    
    # ByteArray accessors
    lib.ITSCAM_ByteArray_size.argtypes = [ITSCAM_ByteArray]
    lib.ITSCAM_ByteArray_size.restype = c_size_t
    
    lib.ITSCAM_ByteArray_data.argtypes = [ITSCAM_ByteArray]
    lib.ITSCAM_ByteArray_data.restype = POINTER(c_ubyte)
    
    lib.ITSCAM_ByteArray_destroy.argtypes = [ITSCAM_ByteArray]
    lib.ITSCAM_ByteArray_destroy.restype = None
    
    # ProfileArray accessors
    lib.ITSCAM_ProfileArray_size.argtypes = [ITSCAM_ProfileArray]
    lib.ITSCAM_ProfileArray_size.restype = c_size_t
    
    lib.ITSCAM_ProfileArray_get.argtypes = [
        ITSCAM_ProfileArray, c_size_t, POINTER(ITSCAM_ProfileInfo)
    ]
    lib.ITSCAM_ProfileArray_get.restype = c_int
    
    lib.ITSCAM_ProfileArray_destroy.argtypes = [ITSCAM_ProfileArray]
    lib.ITSCAM_ProfileArray_destroy.restype = None
    
    # Utility functions
    lib.ITSCAM_getSystemLocalTime.argtypes = []
    lib.ITSCAM_getSystemLocalTime.restype = ITSCAM_Timestamp
    
    lib.ITSCAM_getSystemUtcTime.argtypes = []
    lib.ITSCAM_getSystemUtcTime.restype = ITSCAM_Timestamp
    
    lib.ITSCAM_getEpochTime.argtypes = []
    lib.ITSCAM_getEpochTime.restype = c_uint64
    
    lib.ITSCAM_getEpochTimeMs.argtypes = []
    lib.ITSCAM_getEpochTimeMs.restype = c_uint64
    
    lib.ITSCAM_storeFile.argtypes = [c_char_p, POINTER(c_ubyte), c_size_t, c_int]
    lib.ITSCAM_storeFile.restype = c_int
    
    lib.ITSCAM_createFolder.argtypes = [c_char_p, c_int]
    lib.ITSCAM_createFolder.restype = c_int
    
    lib.ITSCAM_fileExists.argtypes = [c_char_p]
    lib.ITSCAM_fileExists.restype = c_int
    
    lib.ITSCAM_folderExists.argtypes = [c_char_p]
    lib.ITSCAM_folderExists.restype = c_int
    
    lib.ITSCAM_getLastError.argtypes = []
    lib.ITSCAM_getLastError.restype = c_char_p
    
    lib.ITSCAM_getVersion.argtypes = []
    lib.ITSCAM_getVersion.restype = c_char_p

    # ========================================================================
    #  REST client
    # ========================================================================

    lib.ITSCAM_RestClient_create.argtypes = []
    lib.ITSCAM_RestClient_create.restype = ITSCAM_RestClient
    lib.ITSCAM_RestClient_destroy.argtypes = [ITSCAM_RestClient]
    lib.ITSCAM_RestClient_destroy.restype = None

    lib.ITSCAM_RestClient_setBaseUrl.argtypes = [
        ITSCAM_RestClient, c_char_p, c_uint16, c_char_p]
    lib.ITSCAM_RestClient_setBaseUrl.restype = c_int

    lib.ITSCAM_RestClient_setApiPrefix.argtypes = [
        ITSCAM_RestClient, c_char_p]
    lib.ITSCAM_RestClient_setApiPrefix.restype = None

    lib.ITSCAM_RestClient_setCaCertFile.argtypes = [
        ITSCAM_RestClient, c_char_p]
    lib.ITSCAM_RestClient_setCaCertFile.restype = None
    lib.ITSCAM_RestClient_setCaCertData.argtypes = [
        ITSCAM_RestClient, c_char_p]
    lib.ITSCAM_RestClient_setCaCertData.restype = None
    lib.ITSCAM_RestClient_setVerifyServerCertificate.argtypes = [
        ITSCAM_RestClient, c_int]
    lib.ITSCAM_RestClient_setVerifyServerCertificate.restype = None
    lib.ITSCAM_RestClient_setClientCertificate.argtypes = [
        ITSCAM_RestClient, c_char_p, c_char_p]
    lib.ITSCAM_RestClient_setClientCertificate.restype = None

    lib.ITSCAM_RestClient_login.argtypes = [
        ITSCAM_RestClient, c_char_p, c_char_p, c_uint32,
        POINTER(ITSCAM_String)]
    lib.ITSCAM_RestClient_login.restype = c_int

    lib.ITSCAM_RestClient_setAuthToken.argtypes = [
        ITSCAM_RestClient, c_char_p]
    lib.ITSCAM_RestClient_setAuthToken.restype = None
    lib.ITSCAM_RestClient_clearAuthToken.argtypes = [ITSCAM_RestClient]
    lib.ITSCAM_RestClient_clearAuthToken.restype = None

    for verb in ("httpGet", "httpDelete"):
        fn = getattr(lib, "ITSCAM_RestClient_" + verb)
        fn.argtypes = [ITSCAM_RestClient, c_char_p, c_uint32,
                       POINTER(ITSCAM_String)]
        fn.restype = c_int
    for verb in ("httpPut", "httpPost"):
        fn = getattr(lib, "ITSCAM_RestClient_" + verb)
        fn.argtypes = [ITSCAM_RestClient, c_char_p, c_char_p,
                       c_uint32, POINTER(ITSCAM_String)]
        fn.restype = c_int

    # ========================================================================
    #  CGI client
    # ========================================================================

    lib.ITSCAM_CgiClient_create.argtypes = []
    lib.ITSCAM_CgiClient_create.restype = ITSCAM_CgiClient
    lib.ITSCAM_CgiClient_destroy.argtypes = [ITSCAM_CgiClient]
    lib.ITSCAM_CgiClient_destroy.restype = None

    lib.ITSCAM_CgiClient_setBaseUrl.argtypes = [
        ITSCAM_CgiClient, c_char_p, c_uint16, c_char_p]
    lib.ITSCAM_CgiClient_setBaseUrl.restype = c_int
    lib.ITSCAM_CgiClient_setApiPrefix.argtypes = [
        ITSCAM_CgiClient, c_char_p]
    lib.ITSCAM_CgiClient_setApiPrefix.restype = None

    lib.ITSCAM_CgiClient_setCaCertFile.argtypes = [
        ITSCAM_CgiClient, c_char_p]
    lib.ITSCAM_CgiClient_setCaCertFile.restype = None
    lib.ITSCAM_CgiClient_setCaCertData.argtypes = [
        ITSCAM_CgiClient, c_char_p]
    lib.ITSCAM_CgiClient_setCaCertData.restype = None
    lib.ITSCAM_CgiClient_setVerifyServerCertificate.argtypes = [
        ITSCAM_CgiClient, c_int]
    lib.ITSCAM_CgiClient_setVerifyServerCertificate.restype = None
    lib.ITSCAM_CgiClient_setClientCertificate.argtypes = [
        ITSCAM_CgiClient, c_char_p, c_char_p]
    lib.ITSCAM_CgiClient_setClientCertificate.restype = None

    lib.ITSCAM_CgiClient_login.argtypes = [
        ITSCAM_CgiClient, c_char_p, c_char_p, c_uint32]
    lib.ITSCAM_CgiClient_login.restype = c_int
    lib.ITSCAM_CgiClient_setAuthToken.argtypes = [
        ITSCAM_CgiClient, c_char_p]
    lib.ITSCAM_CgiClient_setAuthToken.restype = None
    lib.ITSCAM_CgiClient_clearAuthToken.argtypes = [ITSCAM_CgiClient]
    lib.ITSCAM_CgiClient_clearAuthToken.restype = None
    lib.ITSCAM_CgiClient_setBasicAuth.argtypes = [
        ITSCAM_CgiClient, c_char_p, c_char_p]
    lib.ITSCAM_CgiClient_setBasicAuth.restype = None
    lib.ITSCAM_CgiClient_clearBasicAuth.argtypes = [ITSCAM_CgiClient]
    lib.ITSCAM_CgiClient_clearBasicAuth.restype = None

    lib.ITSCAM_CgiClient_getLastFrame.argtypes = [
        ITSCAM_CgiClient, c_uint32, POINTER(ITSCAM_CgiImage)]
    lib.ITSCAM_CgiClient_getLastFrame.restype = c_int

    lib.ITSCAM_CgiClient_getSnapshot.argtypes = [
        ITSCAM_CgiClient, POINTER(ITSCAM_CgiSnapshotRequest), c_uint32,
        POINTER(ITSCAM_CgiImageArray)]
    lib.ITSCAM_CgiClient_getSnapshot.restype = c_int

    lib.ITSCAM_CgiClient_startMjpegStream.argtypes = [
        ITSCAM_CgiClient, ITSCAM_CgiStreamCallback, c_void_p, c_uint32]
    lib.ITSCAM_CgiClient_startMjpegStream.restype = c_int
    lib.ITSCAM_CgiClient_stopMjpegStream.argtypes = [ITSCAM_CgiClient]
    lib.ITSCAM_CgiClient_stopMjpegStream.restype = None
    lib.ITSCAM_CgiClient_isMjpegStreamRunning.argtypes = [ITSCAM_CgiClient]
    lib.ITSCAM_CgiClient_isMjpegStreamRunning.restype = c_int

    lib.ITSCAM_CgiClient_forceTrigger.argtypes = [
        ITSCAM_CgiClient, c_uint32, POINTER(ITSCAM_String)]
    lib.ITSCAM_CgiClient_forceTrigger.restype = c_int
    lib.ITSCAM_CgiClient_reboot.argtypes = [
        ITSCAM_CgiClient, c_uint32, POINTER(ITSCAM_String)]
    lib.ITSCAM_CgiClient_reboot.restype = c_int

    # Shared accessors
    lib.ITSCAM_String_data.argtypes = [ITSCAM_String]
    lib.ITSCAM_String_data.restype = c_char_p
    lib.ITSCAM_String_size.argtypes = [ITSCAM_String]
    lib.ITSCAM_String_size.restype = c_size_t
    lib.ITSCAM_String_destroy.argtypes = [ITSCAM_String]
    lib.ITSCAM_String_destroy.restype = None

    lib.ITSCAM_CgiImage_mimeType.argtypes = [ITSCAM_CgiImage]
    lib.ITSCAM_CgiImage_mimeType.restype = c_char_p
    lib.ITSCAM_CgiImage_data.argtypes = [ITSCAM_CgiImage]
    lib.ITSCAM_CgiImage_data.restype = POINTER(c_ubyte)
    lib.ITSCAM_CgiImage_size.argtypes = [ITSCAM_CgiImage]
    lib.ITSCAM_CgiImage_size.restype = c_size_t
    lib.ITSCAM_CgiImage_destroy.argtypes = [ITSCAM_CgiImage]
    lib.ITSCAM_CgiImage_destroy.restype = None

    lib.ITSCAM_CgiImageArray_size.argtypes = [ITSCAM_CgiImageArray]
    lib.ITSCAM_CgiImageArray_size.restype = c_size_t
    lib.ITSCAM_CgiImageArray_get.argtypes = [
        ITSCAM_CgiImageArray, c_size_t]
    lib.ITSCAM_CgiImageArray_get.restype = ITSCAM_CgiImage
    lib.ITSCAM_CgiImageArray_destroy.argtypes = [ITSCAM_CgiImageArray]
    lib.ITSCAM_CgiImageArray_destroy.restype = None
